--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(COMPONENT_SRCDIRS ".")
 set(COMPONENT_ADD_INCLUDEDIRS ".")
 
-idf_component_register(SRCS "app_main.c" "temp_sensors.c"
+idf_component_register(SRCS "app_main.c" "temp_sensors.c" "test_task.c" "test_rf24.cpp"
                     INCLUDE_DIRS "")
