--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,11 @@
 # CMakeLists in this exact order for cmake to work correctly
 cmake_minimum_required(VERSION 3.5)
 
+message("running cmake in: ${CMAKE_CURRENT_SOURCE_DIR}")
+set(EXTRA_COMPONENT_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../esp-idf-lib/components)
+
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+
+
 project(playground)
 
